# Lunarfy

./: .cache  .gitignore  A3.py  A4.py  README.md  app.py  application.py  lunarfy-9c860-firebase-adminsdk-bwf4g-98b586e21d.json
A4/: A4.py  pyproject.toml  requirements.txt
Backend/: app.py  application.py  main.py  requirements.txt  temp.py  test.py
Backup12_1/lunarSite/mysite/: .cache  app.py
Backup12_1/lunarSite/mysite/templates/: game.html  gameScriptnope.js  index.html  libraryChoice.html  login.html  price.html  search.html  searchliked.html  signup.html  style.css
Example_AWS/: requirements.txt
Frontend/: index.html  login.html  main.js  search.html  style.css
Game/: game.html  gameScript.js  index.html  oldstyle.css  style.css
Lunarfy/: app.py
Spotify Login/: app.py  setup.py
SpotifyTest/: .cache  app.py
mysite/: app.py
mysite/templates/: correct.html  game.html  index.html  login.html  mysong.html  searchliked.html  style.css
mysiteold/: .cache
mysiteold/templates/: about.html  confirm.html  correct.html  game2.html  gameScript.js  gameScript2.js  mysong.html  search.html  searchliked.html
templates/: about.html  confirm.html  index.html  libraryChoice.html  login.html  main.js  search.html  searchliked.html  signup.html  style.css
