[tool.poetry]
name = "repl_python3_A4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
pandas = "^1.3.3"
pygame = "^2.0.1"
pyperclip = "^1.8.2"
emoji = "^1.5.0"
emojis = "^0.6.0"
googletrans = "^3.0.0"
wikipedia = "^1.4.0"
Twisted = "^21.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
